[gd_scene load_steps=5 format=2]

[ext_resource path="res://other/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Scene 07.gd" type="Script" id=2]
[ext_resource path="res://objects/Platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/Wall.tscn" type="PackedScene" id=4]

[node name="Level" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Active" parent="." index="0"]
editor/display_folded = true

[node name="Ball" parent="Active" index="0"]
position = Vector2( 860, 380 )

[node name="Goal" parent="Active" index="1"]
position = Vector2( 788, 554 )

[node name="Objects" parent="." index="1"]
editor/display_folded = true

[node name="Platform1" parent="Objects" index="0" instance=ExtResource( 3 )]
position = Vector2( 858, 444 )
scale = Vector2( 2, 2 )

[node name="Platform3" parent="Objects" index="1" instance=ExtResource( 3 )]
position = Vector2( 762, 420 )
scale = Vector2( 2, 1 )

[node name="Platform4" parent="Objects" index="2" instance=ExtResource( 3 )]
position = Vector2( 666, 420 )
scale = Vector2( 2, 1 )

[node name="Platform5" parent="Objects" index="3" instance=ExtResource( 3 )]
position = Vector2( 570, 420 )
scale = Vector2( 2, 1 )

[node name="Platform2" parent="Objects" index="4" instance=ExtResource( 3 )]
position = Vector2( 788, 610 )

[node name="Platform6" parent="Objects" index="5" instance=ExtResource( 3 )]
position = Vector2( 546, 468 )

[node name="Platform7" parent="Objects" index="6" instance=ExtResource( 3 )]
position = Vector2( 545.954, 540 )
scale = Vector2( 1, 2 )

[node name="Wall" parent="Objects" index="7" instance=ExtResource( 4 )]
position = Vector2( 818, 790.54 )
scale = Vector2( 1, 13 )

[node name="Wall2" parent="Objects" index="8" instance=ExtResource( 4 )]
position = Vector2( 818, 350 )
scale = Vector2( 1, 2 )
